apps/ipam/ipam-engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ipam-engine
  name: ipam-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipam-engine
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ipam-engine
    spec:
      containers:
      - image: azureipam.azurecr.io/ipam-engine:3.6.0
        name: ipam-engine
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ipam
  name: ipam-engine-service
  namespace: ipam
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: ipam-engine
status:
  loadBalancer: {}
