apps/ipam/ipam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
  generation: 1
  labels:
    app: ipam
    helm.toolkit.fluxcd.io/namespace: ipam
  name: ipam-ingress
  namespace: ipam
spec:
  rules:
  - host: ipam.platform.hmcts.net
    http:
      paths:
      - backend:
          service:
            name: ipam-ui-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: ipam-engine-service
            port:
              number: 80
        path: /api
        pathType: Prefix
